--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "gulp": "^4.0.2",
     "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-html-beautify": "^1.0.1",
     "gulp-sass": "^4.1.0"
   },
   "devDependencies": {
